provisiong-resources/aws/CFScript/VPC_Public_Private.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "VPC with 2 public and 2 private subnet",
    "Metadata": {
      "Type": "AWS::Cloudformation::Interface",
      "ParameterGroups":[{
        "Label": {
          "default": "Worker Network Configuration"
        },
        "Parameters": [
          "vpcCidrBlock",
          "PublicSubnet01",
          "PublicSubnet02",
          "PrivateSubnet01",
          "PrivateSubnet02"]
        }]
    },
    "Parameters": {
      "VpcBlock": {
          "Description": "VPC - this will have 2 public and 2  private subnet",
          "Type": "String",
          "Default": "192.168.0.0/16"
      },
      "PublicSubnet01Block": {
          "Description": "1st Public subnet",
          "Type": "String",
          "Default": "192.168.0.0/18"
      },
      "PublicSubnet02Block": {
          "Description": "2nd Public subnet",
          "Type": "String",
          "Default": "192.168.64.0/18"
      },
      "PrivateSubnet01Block": {
          "Description": "1st Private subnet",
          "Type": "String",
          "Default": "192.168.128.0/18"
      },
      "PrivateSubnet02Block": {
          "Description": "2nd Private subnet",
          "Type": "String",
          "Default": "192.168.192.0/18"
      }
    },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": { "Ref": "VpcBlock" },
          "EnableDnsSupport": true,
          "EnableDnsHostnames": true,
          "Tags": [{ "Key": "Name", "Value": {"Fn::Sub": "${AWS::StackName}-VPC" } }]
        }
      },
        "InternetGateway": {
          "Type": "AWS::EC2::InternetGateway",
          "Properties": {
            "Tags": [{ "Key": "Name", "Value":  "MyEKSIgway" }]
          }
        },
        "VPCGatewayAttachment": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": { "Ref": "VPC" },
            "InternetGatewayId": { "Ref": "InternetGateway" }
          }
        },
        "PublicRouteTable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "VPC" },
            "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-publicRT" } },
            { "Key": "Network", "Value":  "Public" }]
          }
        },
        "PrivateRouteTable01": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "VPC" },
            "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-privateRT01" } },
            { "Key": "Network", "Value":  "Private01" }]
          }
          },
          "PrivateRouteTable02": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "VPC" },
              "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-privateRT02}" } },
              { "Key": "Network", "Value":  "Private02" }]
            }
        },
        "PublicRoute": {
          "DependsOn": "VPCGatewayAttachment",
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": { "Ref": "PublicRouteTable" },
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": { "Ref": "InternetGateway" }
          }
        },
      "PrivateRoute01": {
        "DependsOn": ["VPCGatewayAttachment", "NatGateway01"],
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": { "Ref": "PrivateRouteTable01" },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": { "Ref": "NatGateway01" }
        }
      },
      "PrivateRoute02": {
        "DependsOn": ["VPCGatewayAttachment", "NatGateway02"],
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": { "Ref": "PrivateRouteTable02" },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": { "Ref": "NatGateway02" }
        }
      },
      "NatGateway01": {
        "DependsOn": ["NatGatewayEIP1", "PublicSubnet01", "VPCGatewayAttachment"],
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": { "Fn::GetAtt" : [ "NatGatewayEIP1", "AllocationId" ]},
          "SubnetId": { "Ref": "PublicSubnet01" },
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-NatGatewayAZ1" } }]
        }
      },
      "NatGateway02": {
        "DependsOn": ["NatGatewayEIP2", "PublicSubnet02", "VPCGatewayAttachment"],
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": { "Fn::GetAtt" : [ "NatGatewayEIP2", "AllocationId" ]},
          "SubnetId": { "Ref": "PublicSubnet02" },
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-NatGatewayAZ2" } }]
        }
      },
      "NatGatewayEIP1": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc",
          "InstanceId": "NatGatewayEIP1"
        }
      },
      "NatGatewayEIP2": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc",
          "InstanceId": "NatGatewayEIP2"
        }
      },
      "PublicSubnet01": {
        "Type": "AWS::EC2::Subnet",
        "Metadata": {"Comment":"Public Subnet 01"},
        "Properties": {
          "MapPublicIpOnLaunch": true,
          "AvailabilityZone": {"Fn::Select" : ["0",[ {"Fn::GetAZs" : { "Ref" : "AWS::Region" }} ] ]},
          "VpcId": {"Ref": "VPC"},
          "CidrBlock": {"Ref": "PublicSubnet01Block"},
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-PublicSubnet01"} },
          { "Key": "kubernetes.io/role/elb", "Value":  "1" }]
        }
      },
      "PublicSubnet02": {
        "Type": "AWS::EC2::Subnet",
        "Metadata": {"Comment":"Public Subnet 02"},
        "Properties": {
          "MapPublicIpOnLaunch": true,
          "AvailabilityZone": {"Fn::Select" : ["1",[ {"Fn::GetAZs" : { "Ref" : "AWS::Region" }} ] ]},
          "VpcId": {"Ref": "VPC"},
          "CidrBlock": {"Ref": "PublicSubnet02Block"},
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-PublicSubnet02" } },
          { "Key": "kubernetes.io/role/elb", "Value":  "1" }]
        }
      },
      "PrivateSubnet01": {
        "Type": "AWS::EC2::Subnet",
        "Metadata": {"Comment":"Private Subnet 01"},
        "Properties": {
          "AvailabilityZone": {"Fn::Select" : ["0",[ {"Fn::GetAZs" : { "Ref" : "AWS::Region" }} ] ]},
          "VpcId": {"Ref": "VPC"},
          "CidrBlock": {"Ref": "PrivateSubnet01Block"},
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-PrivateSubnet01" } },
          { "Key": "kubernetes.io/role/internal-elb", "Value":  "1" }]
        }
      },
      "PrivateSubnet02": {
        "Type": "AWS::EC2::Subnet",
        "Metadata": {"Comment":"Private Subnet 02"},
        "Properties": {
          "AvailabilityZone": {"Fn::Select" : ["1",[ {"Fn::GetAZs" : { "Ref" : "AWS::Region" }} ] ]},
          "VpcId": {"Ref": "VPC"},
          "CidrBlock": {"Ref": "PrivateSubnet02Block"},
          "Tags": [{ "Key": "Name", "Value":  {"Fn::Sub": "${AWS::StackName}-PrivateSubnet02" } },
          { "Key": "kubernetes.io/role/internal-elb", "Value":  "1" }]
        }
      },
      "PublicSubnet01RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": { "Ref": "PublicSubnet01" },
          "RouteTableId": { "Ref": "PublicRouteTable" }
        }
      },
      "PublicSubnet02RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": { "Ref": "PublicSubnet02" },
          "RouteTableId": { "Ref": "PublicRouteTable" }
        }
      },
      "PrivateSubnet01RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": { "Ref": "PrivateSubnet01" },
          "RouteTableId": { "Ref": "PrivateRoute01" }
        }
      },
      "PrivateSubnet02RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": { "Ref": "PrivateSubnet02" },
          "RouteTableId": { "Ref": "PrivateRoute02" }
        }
      },
      "ControlPlaneSecurityGroup" : {
        "Type" : "AWS::EC2::SecurityGroup",
        "Properties" : {
          "GroupDescription" : "Cluster communication with worker nodes",
          "VpcId" : {"Ref": "VPC"}
        }
      }
    },
    "Outputs": {
      "subnetIds": {
        "Description": "All subnets in the VPC",
        "Value": {"Fn::Join" : [",",[{"Ref": "PublicSubnet01"},{"Ref": "PublicSubnet02"},{"Ref": "PrivateSubnet01"}, {"Ref": "PrivateSubnet02"}] ]}
      },
      "SecurityGroups":{
        "Description":"Security group for the cluster control plane communication with worker nodes",
        "Value": {"Fn::Join" : [",",[{ "Ref": "ControlPlaneSecurityGroup" }] ]}
      },
      "VpcId":{
        "Description":"EKS VPC ID",
        "Value": {"Ref": "VPC"}
      }
    }
}
